--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
                 <i class="ri-menu-2-line"></i>
             </div>
             <div>
-            <img src="/images/logo.png" class="logoimg">
+            <img src="/logo.png" class="logoimg">
             </div>
         </div>
         <div class="nav2">
@@ -27,8 +27,8 @@
         </div>
        </div>
        <div class="lamp-container">
-        <img src="images/lamp.png" class="lamp">
-        <img src="images/light.png" class="light">
+        <img src="/lamp.png" class="lamp">
+        <img src="/light.png" class="light">
        </div>
        <div class="text-content">
         <div class="h23">
