--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         <h1 class="head1">Latest <br> in lighting</h1>
         <p class="para1">This is the first lamp from our company. We are making lots of them for both <br> house and office purposes</p>
         </div>
-        <button class="button2" ><a href="https://github.com/Anvesh2909" id="btn2" target="_blank">Check All Collections</a></button>
+        <button class="button2" ><a href="#">Check All Collections</a></button>
        </div>
     </div>
     <script src="index.js"></script>
